<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/wordbook_btn1"
        android:textColor="@color/colorBlue"
        android:background="@android:color/transparent"
        android:id="@+id/btn_sortByDefault" />


    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/wordbook_hideExplains"
        android:textColor="@color/colorBlue"
        android:background="@android:color/transparent"
        android:id="@+id/btn_explains" />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/wordbook_btn2"
        android:textColor="@color/colorBlue"
        android:background="@android:color/transparent"
        android:id="@+id/btn_sortByLetter" />


</LinearLayout>
